# IFSE

./: Cargo.toml  README.md  install.sh
src/: main.rs
src/api/: api.rs  commands.rs  lexer.rs  mod.rs
src/config/: config.rs
src/file_system/: folder.rs
src/search_engine/: mod.rs  search.rs  search_engine.rs
src/search_engine/backend/: backend.rs
