[package]
name = "ifs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grep = "0.2.12"
log = {version="0.4.19", features = ["release_max_level_off"]}
log4rs = "1.2.0"
lopdf = "0.31.0"
moka = "0.11.2"
rustyline = { version = "12.0.0", features = ["with-file-history"]}
walkdir = "2.3.3"
